evaluating filtered moments

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -1,7 +1,13 @@
-all : model.pdf
+all : model.pdf filter.pdf
 
 model.pdf : model.tex
 	pdflatex model.tex
+
+filter.pdf : filter.tex
+	pdflatex filter.tex
 	
 model.tex : model.md
 	pandoc -s model.md -o model.tex
+	
+filter.tex: filter.md
+	pandoc -s filter.md -o filter.tex
