--- a/package/MISQPlus/DESCRIPTION
+++ b/package/MISQPlus/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: MISQPlus
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
+Title: A demo for MISQPlus
+Version: 0.1
 Date: 2012-06-21
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What Licence is it under ?
+Author: Wush Wu
+Maintainer: Wush Wu <wush.978@gmail.com>
+Description: 
+License: 
 Depends: Rcpp (>= 0.9.9)
 LinkingTo: Rcpp
