--- a/simulation/normal-test/Makefile
+++ b/simulation/normal-test/Makefile
@@ -6,8 +6,17 @@ all : $(R_DATA) sim.html
 
 sim.html : sim.yml $(R_DATA)
 	php ../yml2rmd/yml2rmd.php sim.yml sim.Rmd
-	Rscript -e "require(knitr);require(markdown);knitr('sim.Rmd','sim.md');markdownToHTML('sim.md','sim.html')"
+	Rscript -e "require(knitr);require(markdown);knit('sim.Rmd','sim.md');markdownToHTML('sim.md','sim.html')"
 
 $(R_DATA) : $(R_SOURCE)
 	R --slave --vanilla < $(@:.Rdata=.R)
 
+clean :
+	-rm *.Rmd
+	-rm *.md
+
+show :
+	google-chrome sim.html
+
+debug :
+	php -r "print_r(yaml_parse_file('sim.yml'));"
