--- a/simulation/normal-test/sim.yml
+++ b/simulation/normal-test/sim.yml
@@ -8,7 +8,6 @@ Simulation:
         ```
     Experiments:
       _attribute:
-        _class_name: RmdGeneratedNode
         _generator:
           0: distance
         distance:
@@ -16,21 +15,30 @@ Simulation:
           1: 1
           10: 10
           100: 100
-        _template: |
-          #### D = %distance
-          
-          - $latex S_1(t)$ is $latex N(0,1)$ distributed.
-          - $latex S_2(t)$ is $latex N(%distance%,1)$ distributed.
-          ```{r qqnorm-misq1-%distance%, echo=FALSE}
-          source("pre.R")
-          library(MISQPlus, quietly=TRUE)
-          source("misq1.params.R")
-          misq1 <- new("MISQ", phi)
-          sim.unit <- function(i) {
-            S <- cbind(rnorm(data.length), rnorm(data.length) + %distance%)
-            dist(S, misq1)
-          }
-          sim.data <- sapply(1:sim.size, sim.unit)
-          load("misq1-%distance%.Rdata")
-          test.normality(sim.data)
-          ```
+      Normality Src:
+        _attribute:
+          _class_name: RmdRsrcNode
+          _src_name: misq1-%distance%.R
+          _template: |
+            library(MISQPlus, quietly=TRUE)
+            source("misq1.params.R")
+            misq1 <- new("MISQ", phi)
+            sim.unit <- function(i) {
+              S <- cbind(rnorm(data.length), rnorm(data.length) + %distance%)
+              dist(S, misq1)
+            }
+            sim.data <- sapply(1:sim.size, sim.unit)
+      Normality Test:
+        _attribute:
+          _class_name: RmdGeneratedNode
+          _template: |
+            ##### D = %distance%
+            
+            - $latex S_1(t)$ is $latex N(0,1)$ distributed.
+            - $latex S_2(t)$ is $latex N(%distance%,1)$ distributed.
+            ```{r qqnorm-misq1-%distance%, echo=FALSE}
+            source("pre.R")
+            cache.source("misq1-%distance%.R")
+            test.normality(sim.data)
+            ```
+      
