--- a/simulation/moment-test/sim.yml
+++ b/simulation/moment-test/sim.yml
@@ -25,7 +25,6 @@ Simulation:
           _src_name: build/misq1-%@distance%-%@phi%-%@data.length%.R
           _template: |
             library(MISQPlus, quietly=TRUE)
-            source("misq1.params.R")
             misq1 <- new("MISQ", %phi%)
             sim.unit <- function(i) {
               S <- cbind(rnorm(%data.length%), rnorm(%data.length%) + %distance%)
@@ -44,4 +43,5 @@ Simulation:
             ```{r misq1-%@distance%-%@phi%-%@data.length%}
             source("pre.R")
             cache.source("build/misq1-%@distance%-%@phi%-%@data.length%.R")
+            print((apply(sim.data,1,function(a) round(mean(a),2))))
             ```
