--- a/simulation/moment-test/sim.yml
+++ b/simulation/moment-test/sim.yml
@@ -43,8 +43,8 @@ Simulation:
         _template: |
           #### D = %distance%, phi = %phi%, data.length = %data.length% 
           
-          ```{r misq1-%@distance%-%@phi%-%@data.length%}
+          ```{r misq1-%@distance%-%@phi%-%@data.length%, cache=TRUE}
           source("pre.R")
-          cache.source("build/misq1-%@distance%-%@phi%-%@data.length%.R")
+          source("build/misq1-%@distance%-%@phi%-%@data.length%.R")
           print((apply(sim.data,1,function(a) round(mean(a),2)))[-1])
           ```
