--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -1,4 +1,4 @@
-all : model.pdf filter.pdf misq.pdf
+all : model.pdf filter.pdf misq.pdf lambda.pdf
 
 model.pdf : model.tex
 	pdflatex model.tex
@@ -9,6 +9,8 @@ filter.pdf : filter.tex
 model.tex : model.md
 	pandoc -s model.md -o model.tex
 	
+	
+	
 filter.tex: filter.md
 	pandoc -s filter.md -o filter.tex
 
@@ -17,3 +19,9 @@ misq.pdf : misq.tex
 
 misq.tex : misq.md
 	pandoc -s misq.md -o misq.tex
+
+lambda.pdf : lambda.tex
+	pdflatex lambda.tex
+
+lambda.tex : lambda.md
+	pandoc -s lambda.md -o lambda.tex
