--- a/simulation/moment-test/sim.yml
+++ b/simulation/moment-test/sim.yml
@@ -24,12 +24,15 @@ Simulation:
         In the following experiments, the $latex S_1(t)$ and $latex S_2(t)$ are two i.i.d. normal distributed 
         synthetic time series. The distance between the time series are varied as $0, 1, 10, 100$. The length
         are also varied as $10, 100$. Here, we test 2 filters: $\phi = (-1,1)^T$ and $\phi = (-0.5, 1, -0.5)$.  
-        The estimated $M_2$ and $M_4$ are reported and should be invariant of the length and $\phi$.
-    Moment Src:
+        The estimated $M_2$ and $M_4$ are reported and should be $2$ and $12$ according to .
+    Moment Test:
       _attribute:
-        _class_name: RmdRsrcNode
-        _src_name: build/misq1-%@distance%-%@phi%-%@data.length%.R
+        _class_name: RmdGeneratedNode
         _template: |
+          #### D = %distance%, phi = %phi%, data.length = %data.length% 
+          
+          ```{r misq1-%@distance%-%@phi%-%@data.length%, cache=TRUE, echo=FALSE}
+          source("pre.R")
           library(MISQPlus, quietly=TRUE)
           misq1 <- new("MISQ", %phi%)
           sim.unit <- function(i) {
@@ -37,14 +40,5 @@ Simulation:
             unlist(dist(S, misq1))
           }
           sim.data <- sapply(1:%sim.size%, sim.unit)
-    Moment Test:
-      _attribute:
-        _class_name: RmdGeneratedNode
-        _template: |
-          #### D = %distance%, phi = %phi%, data.length = %data.length% 
-          
-          ```{r misq1-%@distance%-%@phi%-%@data.length%, cache=TRUE}
-          source("pre.R")
-          source("build/misq1-%@distance%-%@phi%-%@data.length%.R")
-          print((apply(sim.data,1,function(a) round(mean(a),2)))[-1])
+          print((apply(sim.data,1,function(a) round(mean(a),2)))[c('M_2','M_4')])
           ```
